--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ devel-check.out
 *.sse2f
 *.fn
 gitlog-all.txt
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
